[package]
name = 'mf_sellout_reporter'
description = 'A specialized sellout reporting service purposefully built for Mini-Farm SRL'
version = '0.1.0'
authors = ['Paul-Sebastian Manole <brokenthorn@gmail.com>']
documentation = 'https://github.com/brokenthorn/mf-sellout-reporter'
repository = 'https://github.com/brokenthorn/mf-sellout-reporter'
edition = '2018'

[dependencies]
anyhow = '1.0.32'
cron = '0.6.1'
csv = '1.1.3'
dotenv = '0.15.0'
futures = '0.3.5'
tracing = '0.1.19'
tracing-subscriber = '0.2.11'
tracing-futures = '0.2.4'

[dependencies.async-std]
version = '1.6.3'
features = ['attributes']

[dependencies.tiberius]
version = '0.4.8'
default-features = false
features = [
    'chrono',
    'tds73',
]

[dependencies.chrono]
version = '0.4.15'
features = ['serde']

[dependencies.serde]
version = '1.0.115'
features = ['derive']

[dependencies.uuid]
version = '0.8.1'
features = ['v4']
